[package]
name = "ipfs_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1